# lca_algebraic

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  Optimized_Model_for_Sobol_DRAFT1_TANNOUS_Scarlett.Rmd  Optimized_Model_for_Sobol_DRAFT1_TANNOUS_Scarlett.ipynb  PARASOL_LCA_30parameters_BPublication_Results_Final_190814.Rmd  Parameters_for_Optimised_Model_Sobol_DRAFT1_TANNOUS_Scarlett.ipynb  README.md  RELEASE_NOTES.md  Sobol_example_SACCHI.ipynb  Untitled.ipynb  algebraic-pv-model.Rmd  algebraic_model.Rmd  algebraic_model.ipynb  construct.yaml  doc.html  environment.yml  example-notebook.Rmd  example-notebook.ipynb  example-notebook.md  example-notebook_all_output.ipynb  expression.py  lca_algebraic.py  meta.yaml  metadata.py  parametrized_sandbox.Rmd  parametrized_sandbox.ipynb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  utils.py
.github/workflows/: tests.yml
conda-recipe/: meta.yaml
doc/: Makefile  base_utils.html  doc.html  helpers.html  index.html  io.html  lca-algebraic.odp  lca.html  params.html  requirements.txt  stats.html
doc/source/: conf.py  index.md
doc/source/api/: activities.md  databases.md  impacts.md  index.md  lca.md  methods.md  parameters.md  sensitivity.md  units.md
doc/source/notebooks/: example-notebook-index.md  example-notebook_.md  handbook_.md  index.md  init.py
lca_algebraic/: __init__.py  activity.py  axis_dict.py  base_utils.py  cache.py  database.py  db.py  edges_utils.py  explore.py  export.py  globs.py  helpers.py  interpolation.py  io.py  lca.py  log.py  matrix.py  methods.py  oie.py  params.py  settings.py  stats.py  units.py
lca_algebraic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
lib/: timer.py  utils.py
notebooks/: example-notebook.ipynb  handbook.ipynb  init.py
test/: conftest.py  notebook_runner.py  test_axis_dict.py  test_cache.py  test_edges.py  test_units.py  tests.py  unit_test.py
test/fixtures/: __init__.py
test/res/: custom_edge_method.json
