[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lca_algebraic"
version = "1.2"

description = "This library provides a layer above brightway2 for defining parametric models and running super fast LCA for monte carlo analysis."
readme = "README.md"
license = { text = "BSD" }
requires-python = ">=3.10,<=3.12"

authors = [
  { name = "OIE - Mines ParisTech", email = "raphael.jolivet@mines-paristech.fr" }
]

keywords = ["LCA", "brightway2", "monte-carlo", "parametric"]

classifiers = []

dependencies = [
  "tabulate",
  "ipywidgets",
  "pandas",
  "pyarrow",
  "seaborn",
  "sympy",
  "matplotlib",
  "deprecation",
  "brightway25",
  "SALib",
  "pint",
  "typing-extensions",
  "pypardiso; platform_machine == 'x86_64'"
]

[project.urls]
Homepage = "https://lca-algebraic.readthedocs.io/en/stable/"
Repository = "https://github.com/oie-mines-paristech/lca_algebraic.git"
Documentation = "https://lca-algebraic.readthedocs.io/"
Changelog = "https://github.com/oie-mines-paristech/lca_algebraic/blob/main/RELEASE_NOTES.md"

[tool.setuptools]
packages = ["lca_algebraic"]

[tool.setuptools.package-data]
lca_algebraic = ["VERSION", "README.md"]
