[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lca_algebraic"
version = "1.3"

description = "This library provides a layer above brightway2 for defining parametric models and running super fast LCA for monte carlo analysis."
readme = "README.md"
license = { text = "BSD" }
requires-python = ">=3.10,<3.13"

authors = [
  { name = "OIE - Mines ParisTech", email = "raphael.jolivet@mines-paristech.fr" }
]

keywords = ["LCA", "brightway2", "monte-carlo", "parametric"]

classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

dependencies = [
  "tabulate",
  "ipywidgets",
  "pandas",
  "pyarrow",
  "seaborn",
  "sympy",
  "matplotlib",
  "deprecation",
  "brightway2",
  "SALib",
  "pint",
  "typing-extensions",
  "pypardiso; platform_machine == 'x86_64'"
]

[project.urls]
Homepage = "https://lca-algebraic.readthedocs.io/en/stable/"
Repository = "https://github.com/oie-mines-paristech/lca_algebraic.git"
Documentation = "https://lca-algebraic.readthedocs.io/"
Changelog = "https://github.com/oie-mines-paristech/lca_algebraic/blob/main/RELEASE_NOTES.md"

[tool.setuptools]
packages = ["lca_algebraic"]

[tool.setuptools.package-data]
lca_algebraic = ["README.md"]


[tool.tox]
requires = ["tox>=4"]
env_list = ["py310", "py311", "py312"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
deps = ["pytest>=7", "nbmake"]
commands = [["pytest"]]

[tool.flake8]
max-line-length = 130
exclude = ["tests/*", "doc/*"]
per-file-ignores = { "**/__init__.py" = ["F403", "F405", "F401"] }

